# text-card-prototyper

./: .gitignore  LICENSE  README.md  card_generator.py  logo_provider.py  lorem-cards.txt  main.py  poe-cards.txt  pyproject.toml
